# HackLondon2025

./: .gitignore  README.md  XGB Variable Importance overall.ipynb  patient_info_processed.csv  pyproject.toml  requirements.txt  study_planner.db  test.ipynb  test1.py  test2.py  trained_model.pkl  xgb.py  xgboost_model.pkl
src/: client.py  main.py
src/api/: routes.py
src/middleware/: correlation.py  timing.py
src/models/: Diagnose.py  database.py  study_plan.py
src/services/: study_planner.py  study_session_service.py  user_service.py
src/utils/: asrs_advisor.py  generate_analysis.py  prediction.py  test2.py  trained_model.pkl  xgb.py  xgboost_model.pkl
src/utils/data/: features_processed.csv  features_processed1.csv  patient_info_processed.csv
tests/: verifyPkl.py
